Revising opening again (32361 words)

--- a/welcome.tex
+++ b/welcome.tex
@@ -1,17 +1,56 @@
 \chaplbl{Introductions}{sec:welcome}
 
 There's more to programming than typing in code.  Good programmers
-break their software up into functions, automate repetitive tasks,
-keep track of their work using version control, and write lots of
-little tests as they go along.
+break their software up into functions, automate repetitive tasks, and
+keep track of their work using version control.  Once they have
+mastered those basics, they start doing code reviews and writing tests
+as they go along.  They don't invent these techniques for themselves:
+more experienced programmers teach them (either explicitly or by
+example), and they in turn pass them on to others.
 
 Similarly, there's more to teaching than talking.  Good teachers break
 subjects up into digestible pieces, design lessons with verifiable
 goals in mind, check their students' progress at short intervals, and
 encourage collaboration and improvisation.  Like good programming
-techniques, these practices can be taught and learned, and pay off
-quickly and dramatically.  Adopting them won't automatically make you
-a great teacher, but they \emph{will} make you a better teacher.
+practices, these don't have to be reinvented by every teacher: they
+can and should be taught and learned.  And while they can't
+automatically make someone a great teacher, they do make people better
+teachers.
+
+\seclbl{What We Will Cover}{sec:welcome-cover}
+
+This training course is a fast, wide-ranging, and (necessarily)
+incomplete introduction to modern evidence-based teaching practices.
+Its aim is introduce you to what we actually know about teaching and
+learning, why we believe it is true, and how you can apply it.  We
+will look at:
+
+\begin{itemize}
+
+\item
+  how people's thinking changes as they go from being novices to
+  competent practitioners and then to being experts;
+
+\item
+  how to tell if your learners are keeping up with you, and what to
+  do or say when they're not;
+
+\item
+  how to design and improve lessons efficiently and collaboratively;
+
+\item
+  how and why live coding is a better way to teach programming than
+  lectures or self-directed practice; and
+
+\item
+  how insights and techniques borrowed from the performing arts can
+  make you a better teacher.
+
+\end{itemize}
+
+We can't cover everything you need to know to teach well.  In fact,
+we can barely scratch the surface.  But we hope that what we show you
+will be useful, and will convince you that better is possible.
 
 \seclbl{History}{sec:welcome-history}
 
@@ -64,46 +103,25 @@ Carpentry who wanted to help children, recent immigrants, women
 re-entering the workforce, and a wide variety of others learn how to
 make computers work for them.
 
-\seclbl{What We Will Cover}{sec:welcome-cover}
-
-That training course is the basis of this short guide.  Its aim is
-give you a quick, useful introductions to what we know about teaching
-and learning and why we believe it is true.  We will look at:
-
-\begin{itemize}
-
-\item
-  how people's thinking changes as they go from being novices to
-  competent practitioners and then to being experts;
-
-\item
-  how to tell if your learners are keeping up with you, and what to
-  do or say when they're not;
-
-\item
-  how to design and improve lessons efficiently and collaboratively;
-
-\item
-  how and why live coding is a better way to teach programming than
-  lectures or self-directed practice; and
-
-\item
-  how insights and techniques borrowed from the performing arts can
-  make you a better teacher.
-
-\end{itemize}
-
-\noindent
-We can't cover everything you need to know to teach well.  In fact,
-we can barely scratch the surface.  But we hope that what we show you
-will be useful, and will convince you that better is possible.
+Those readings and experiences are the basis of this book, but its
+roots go much deeper.  I am grateful, always, to my own teachers for
+starting me down this path, including Louis Biczo, Lon Taylor, Ken
+Douglas, and above all, my father, Rob Wilson.  I am also grateful to
+the people who helped create the Software Carpentry instructor
+training course, including Erin Becker, Karen Cranston, Neal Davis,
+Rayna Harris, Kate Hertweck, Christina Koch, Sue McClatchy, Lex
+Nederbragt, Elizabeth Patitsas, Aleksandra Pawlik, Ariel Rokem, Tracy
+Teal, Fiona Tweedie, Allegra Via, Anelda van der Walt, Belinda Weaver,
+Jason Williams, and the hundreds of people who went through it in
+various guises over the years.  I hope you enjoy it, and if you do, I
+hope you pass on whatever you find helpful to someone else.
 
 \seclbl{Teaching Practices}{sec:welcome-practices}
 
-This book can be read on its own, but we believe it's more effective
-when used as part of an intensive in-person class.  Accordingly, we
-start by presenting three practices that you can use while taking such
-a class, as well as in the workshops you teach yourself.
+This book can be read on its own, but it is more effective when used
+as part of an intensive in-person class.  Accordingly, we start by
+presenting three practices that you can use while taking such a class,
+as well as in the workshops you teach yourself.
 
 \subseclbl{Have a Code of Conduct}{sec:welcome-conduct}
 
