Updating the first chapter (31987 words)

--- a/lessons.tex
+++ b/lessons.tex
@@ -1,4 +1,4 @@
-\chaplbl{Lessons}{sec:lessons}
+\chaplbl{Lessons}{sec:lessons}{0}{0}
 
 So far, we've spent a lot of time talking about details of teaching and
 learning.
