--- a/live.tex
+++ b/live.tex
@@ -1,4 +1,4 @@
-\chaplbl{Live Coding}{sec:live}
+\chaplbl{Live Coding}{sec:live}{0}{0}
 
 One of the cornerstones of Software and Data Carpentry teaching is live
 coding: instructors don't use slides, but work through the lesson
