--- a/load.tex
+++ b/load.tex
@@ -1,4 +1,4 @@
-\chaplbl{Cognitive Load}{sec:load}
+\chaplbl{Cognitive Load}{sec:load}{0}{0}
 
 In our final topic in educational psychology, we'll be learning more
 about human memory: specifically how to remove unnecessary ``load'' in
