--- a/memory.tex
+++ b/memory.tex
@@ -1,4 +1,4 @@
-\chaplbl{Expertise and Memory}{sec:memory}
+\chaplbl{Expertise and Memory}{sec:memory}{0}{0}
 
 Returning to educational psychology, we now discuss what distinguishes
 expertise from earlier stages of learning, how expertise can be helpful
