--- a/motivation.tex
+++ b/motivation.tex
@@ -1,4 +1,4 @@
-\chaplbl{Motivation and Demotivation}{sec:motivation}
+\chaplbl{Motivation and Demotivation}{sec:motivation}{0}{0}
 
 In order for learners to step out into new and familiar terrain, they
 will need encouragement. This section discusses typical ways that
