--- a/practices.tex
+++ b/practices.tex
@@ -1,4 +1,4 @@
-\chaplbl{Teaching Practices}{sec:practices}
+\chaplbl{Teaching Practices}{sec:practices}{0}{0}
 
 We regard teaching as a performance art, no different from drama, music,
 or athletics. And as in those fields, we have a collection of small tips
