--- a/terms.tex
+++ b/terms.tex
@@ -1,4 +1,4 @@
-\chaplbl{Terminology}{sec:terms}
+\chaplbl{Terminology}{sec:terms}{0}{0}
 
 The following terms will support the discussions and activities in the
 rest of the training by giving us a common vocabulary to talk about
