--- a/welcome.tex
+++ b/welcome.tex
@@ -1,4 +1,4 @@
-\chaplbl{Introductions}{sec:welcome}
+\chaplbl{Introductions}{sec:welcome}{15}{15}
 
 There's more to programming than typing in code.  Good programmers
 break their software up into functions, automate repetitive tasks, and
