--- a/carpentries.tex
+++ b/carpentries.tex
@@ -1,4 +1,4 @@
-\chaplbl{The Carpentries}{sec:carpentries}
+\chaplbl{The Carpentries}{sec:carpentries}{0}{0}
 
 In becoming an instructor for Software or Data Carpentry, you are also
 becoming part of a community of like-minded volunteers. This section
