--- a/performance.tex
+++ b/performance.tex
@@ -1,4 +1,4 @@
-\chaplbl{Teaching as a Performance Art}{sec:performance}
+\chaplbl{Teaching as a Performance Art}{sec:performance}{0}{0}
 
 Continuing with our theme of instructor-as-performer, let's discuss some
 research that suggests that improvement in educational outcomes must be
