--- a/settings.tex
+++ b/settings.tex
@@ -13,6 +13,7 @@
 \usepackage{framed}
 \usepackage{geometry}
 \usepackage{graphicx}
+\usepackage{scrextend}
 
 \usepackage[T1]{fontenc}
 \usepackage{tgtermes}    % body font
@@ -42,7 +43,9 @@
 \newenvironment{challenge}[2]{\begin{barredsection}{Challenge}{#1}{#2} }{ \end{barredsection}}
 \newenvironment{discussion}[2]{\begin{barredsection}{Discussion}{#1}{#2} }{ \end{barredsection}}
 
-\newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
+\newenvironment{example}{\begin{addmargin}[2em]{2em}}{\end{addmargin}}
+
+\newcommand{\chaplbl}[4]{\chapter{#1}\label{#2}\noindent \textbf{Lesson: {#3} minutes} \\ \textbf{Challenges: {#4} Minutes}}
 
 \newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\caption{#2}\label{#3}\includegraphics[width={#1}]{#4}\end{figure}}
 
