--- a/settings.tex
+++ b/settings.tex
@@ -60,6 +60,8 @@
 {\end{table}}
 
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
+\newcommand{\figref}[1]{Figure~\ref{#1}}
+\newcommand{\figrefsub}[2]{Figure~\ref{#1}({#2})}
 \newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
 \newcommand{\tblref}[1]{Table~\ref{#1}}
