Another chapter (30125 words)

--- a/memory.tex
+++ b/memory.tex
@@ -285,7 +285,7 @@ discussion can be\ldots{}vigorous.
 
 \end{callout}
 
-\seclbl{Challenges}{sec:novice-challenges}
+\seclbl{Challenges}{sec:memory-challenges}
 
 \begin{challenge}{The Serial Position Effect}{chal:the-serial-position-effect}
 
