--- a/memory.tex
+++ b/memory.tex
@@ -6,9 +6,12 @@ how people acquire it, and how it can be harmful as well as helpful.
 We will then see how concept maps can be used to figure out how to
 turn knowledge into lessons.
 
-\seclbl{Connectivity}{sec:connectivity}
-
-\fixme{symptoms of expertise}
+To start, what do we mean when we say someone is an expert?  The usual
+response is that they can solve problems much faster than people who
+are ``merely competent'', or that they can recognize and deal with the
+cases where the normal rules don't apply.  They also somehow make this
+look effortless: in most cases, they just know what the right answer
+is.
 
 What makes someone an expert? The answer isn't that they know more
 facts: competent practitioners can memorize a lot of trivia without
