--- a/novice.tex
+++ b/novice.tex
@@ -86,16 +86,12 @@ other books in computing that have accomplished this.
 
 \end{callout}
 
-\seclbl{Building Useful Mental Models}{sec:building-useful-mental-models}
-
-\begin{quote}
-It ain't what you don't know that gets you into trouble. It's what you
-know for sure that just ain't so.\\--- Mark Twain
-\end{quote}
-
 One of the challenges in building a mental model is to clear away
-things that \emph{don't} belong. Broadly speaking, learners'
-misconceptions fall into three categories:
+things that \emph{don't} belong.  As Mark Twain said, ``It ain't what
+you don't know that gets you into trouble. It's what you know for sure
+that just ain't so.''
+
+Broadly speaking, learners' misconceptions fall into three categories:
 
 \begin{itemize}
 
