--- a/welcome.tex
+++ b/welcome.tex
@@ -17,8 +17,6 @@ can and should be taught and learned.  And while they can't
 automatically make someone a great teacher, they do make people better
 teachers.
 
-\seclbl{What We Will Cover}{sec:welcome-cover}
-
 This training course is a fast, wide-ranging, and (necessarily)
 incomplete introduction to modern evidence-based teaching practices.
 Its aim is introduce you to what we actually know about teaching and
@@ -52,7 +50,7 @@ We can't cover everything you need to know to teach well.  In fact,
 we can barely scratch the surface.  But we hope that what we show you
 will be useful, and will convince you that better is possible.
 
-\seclbl{History}{sec:welcome-history}
+\section*{History}
 
 I started teaching people how to program in the late 1980s.  At first,
 I was pretty bad at: I went too fast, I used too much jargon, and I
